@@ -307,9 +307,12 @@ gcc -c -I. -Impn -I.. -fomit-frame-pointer -O mp_clz_tab.c
 gcc -c -I. -Impn -I.. -fomit-frame-pointer -O mp_set_fns.c
 gcc -c -I. -Impn -I.. -fomit-frame-pointer -O stack-alloc.c
 gcc -c -I. -Impn -I.. -fomit-frame-pointer -O rand.c
+gcc -c -I. -Impn -I.. -fomit-frame-pointer -O randui.c
 gcc -c -I. -Impn -I.. -fomit-frame-pointer -O randclr.c
 gcc -c -I. -Impn -I.. -fomit-frame-pointer -O randcm.c
+gcc -c -I. -Impn -I.. -fomit-frame-pointer -O randcmui.c
 gcc -c -I. -Impn -I.. -fomit-frame-pointer -O randlc.c
+gcc -c -I. -Impn -I.. -fomit-frame-pointer -O randlcui.c
 gcc -c -I. -Impn -I.. -fomit-frame-pointer -O version.c
 deltree/y tmpdir
 
