@@ -22,7 +22,8 @@ the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA. */
 
 #include <stdlib.h>		/* FIXME: For malloc(). */
-#include <gmp.h>
+#include "gmp.h"
+#include "gmp-impl.h"
 
 void
 #if __STDC__
